# wabbit

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  llvm.sh  search-index.js  settings.html  shell.nix  source-files.js
.github/workflows/: ci.yml
implementors/lazy_static/: trait.LazyStatic.js
program_examples/: 03_intvar.wb  08_intrel.wb  09_floatrel.wb  11_cond.wb  12_loop.wb  14_charrel.wb  17_shortcircuit.wb  20_square.wb  21_sqrt.wb
src/: analyzer.rs  ast.rs  environment.rs  error.rs  formatter.rs  interpreter.rs  lib.rs  llvm.rs  main.rs  operators.rs  parser.rs  scanner.rs  tokens.rs  typechecker.rs  types.rs  wasm_interpreter.rs
src/wabbit/: analyzer.rs.html  ast.rs.html  environment.rs.html  error.rs.html  formatter.rs.html  interpreter.rs.html  lib.rs.html  llvm.rs.html  operators.rs.html  parser.rs.html  scanner.rs.html  tokens.rs.html  typechecker.rs.html  types.rs.html  wasm_interpreter.rs.html
src/wabbit_rs/: wabbit-rs.rs.html
tests/: formatter.rs  interpreter.rs  parser.rs  scanner.rs  typechecker.rs
wabbit/: all.html  enum.Type.html  enum.WabbitType.html  fn.wasm_entry.html  fn.wasm_interp.html  index.html  sidebar-items.js
wabbit/analyzer/: index.html  struct.Analyzer.html
wabbit/ast/: enum.Expr.html  enum.Stmt.html  index.html  sidebar-items.js
wabbit/environment/: enum.VarStore.html  index.html  sidebar-items.js  struct.Environment.html
wabbit/error/: enum.Msg.html  index.html  macro.err.html  macro.msg.html  sidebar-items.js  type.Result.html  (+4 more)
wabbit_rs/: all.html  fn.main.html  index.html  struct.Cli.html
(+75 files in other folders)
