[package]
name = "wabbit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
annotate-snippets = "0.9.1"
clap = { version = "4.3.10", features = ["derive"] }
dynfmt = { version = "0.1.5", features = ["curly"] }
lazy_static = "1.4.0"
main_error = "0.1.2"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
